--- a/charts/demo/templates/deployment.yaml
+++ b/charts/demo/templates/deployment.yaml
@@ -21,6 +21,42 @@ spec:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        env:
+          - name: DB_HOST
+            value: 127.0.0.1:3306
+          # These secrets are required to start the pod.
+          # [START cloudsql_secrets]
+          - name: DB_USER
+            valueFrom:
+              secretKeyRef:
+                name: cloudsql-db-credentials
+                key: username
+          - name: DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: cloudsql-db-credentials
+                key: password
+          # [END cloudsql_secrets]
+      # Change <INSTANCE_CONNECTION_NAME> here to include your GCP
+      # project, the region of your Cloud SQL instance and the name
+      # of your Cloud SQL instance. The format is
+      # $PROJECT:$REGION:$INSTANCE
+      # [START proxy_container]
+      - name: cloudsql-proxy
+        image: gcr.io/cloudsql-docker/gce-proxy:1.11
+        command: ["/cloud_sql_proxy",
+                  "-instances=beemob-test:asia-southeast1:becastle-data=tcp:3306",
+                  "-credential_file=/secrets/cloudsql/credentials.json"]
+        # [START cloudsql_security_context]
+        securityContext:
+          runAsUser: 2  # non-root user
+          allowPrivilegeEscalation: false
+        # [END cloudsql_security_context]
+        volumeMounts:
+          - name: cloudsql-instance-credentials
+            mountPath: /secrets/cloudsql
+            readOnly: true
+      # [END proxy_container]
         ports:
         - containerPort: {{ .Values.service.internalPort }}
         livenessProbe:
@@ -41,3 +77,10 @@ spec:
         resources:
 {{ toYaml .Values.resources | indent 12 }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
+      serviceAccountName: {{ .Values.service.name }}
+      # [START volumes]
+      volumes:
+        - name: cloudsql-instance-credentials
+          secret:
+            secretName: cloudsql-instance-credentials
+      # [END volumes]
