--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,31 @@
 #database=mysql
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://${DB_HOST}/battle_rush?useSSL=false
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://${DB_HOST}/battle_rush?useSSL=false
+#spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PASSWORD}
+#
+#logging.level.com.zaxxer.hikari=debug
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto = update
+
+
+spring.cloud.gcp.sql.database-name=battle_rush
+spring.cloud.gcp.sql.instance-connection-name=beemob-test:asia-southeast1:becastle-data
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+spring.cloud.gcp.credentials.location=file:/secrets/cloudsql/credentials.json
 
-#spring.datasource.hikari.maximumPoolSize=5
-#spring.datasource.hikari.idleTimeout=30000
-#spring.datasource.hikari.maxLifetime=1200000
-#spring.datasource.hikari.connectionTimeout=30000
+# So app starts despite "table already exists" errors.
+spring.datasource.continue-on-error=true
 
-logging.level.com.zaxxer.hikari=debug
+# Enforces database initialization
+spring.datasource.initialization-mode=always
+#spring.main.allow-bean-definition-overriding=true
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
+
+### Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
