--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
 
 ### Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
+
+spring.cloud.gcp.trace.enabled=true
+spring.sleuth.sampler.probability=1
+spring.sleuth.web.skipPattern=(^cleanup.*|.+favicon.*)
