--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
 			<version>1.11.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-gcp-starter-trace</artifactId>
+			<version>1.0.0.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
